<resources>
    <string name="app_name">大道通联</string>

    <string name="subing_hint">正在加载,请稍候&#8230;</string>
    <string name="getdata_failed">获取数据失败</string>
    <string name="sockettimeoutexception">服务器响应超时</string>
    <string name="connectexception">网络连接异常,请检查网络</string>
    <string name="runtimeexception">运行时错误</string>
    <string name="unknownhostexception">无法解析主机,请检查网络连接</string>
    <string name="unknownserviceexception">未知的服务器错误</string>

    <string name="hint_input_user">请输入账号/手机</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_input_code">请输入手机验证码</string>
    <string name="user_agreement">《用户注册协议》</string>
    <string name="find_psw">找回密码</string>
    <string name="next">下一步</string>
    <string name="sure">确认</string>
    <string name="save">保存</string>

    <string name="txt_remind_phone">请输入手机号码</string>
    <string name="error_phone">请检查手机号码是否正确</string>
    <string name="empty_phone">手机号码不能为空</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="error_pwd">请检查密码格式是否正确</string>
    <string name="error_email">请检查邮箱格式是否正确</string>
    <string name="empty_email">邮箱不能为空</string>
    <string name="txt_remind_pwd">请输入密码</string>

    <string name="json_failed">解析失败</string>
    <string name="phone_number">手机号</string>
    <string name="get_login_code">获取验证码</string>
    <string name="get_login_wechat">微信登录</string>
    <string name="get_login_qq">QQ登录</string>
    <string name="band_phone">绑定手机</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <string-array name="welcome_tips">
        <item >主人，小彩机器人在此等候多时了</item>
        <item >主人，近来一切可好</item>
        <item >亲爱的，我想死你了</item>
        <item >欢迎回来，我是小彩机器人。</item>
        <item >我是小彩机器人，很高兴为您服务。</item>
    </string-array>
</resources>
