<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_top"/>
	
	<View
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="@color/bg_common" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/forgot_input_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:textColorHint="@color/txt_gray_light"
            android:textSize="@dimen/txt_title" >
            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/img_phone_delete_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_delete"
            android:visibility="gone" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:phoneNumber="true"
                android:maxLength="6"
                android:singleLine="true"
                android:hint="@string/hint_input_code"
                android:textSize="@dimen/txt_title" >
            </EditText>

        <TextView
            android:id="@+id/imageView1"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_selector"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="获取验证码"
            android:textSize="@dimen/txt_large"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_common" >

      <TextView
        android:id="@+id/forgot_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
      	android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="@dimen/txt_large"  />
    </RelativeLayout>
</LinearLayout>
