<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_top"/>
	
	<View
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="@color/bg_common" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@+id/imageView1"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:errorTextAppearance="@style/MyErrorStyle"
        >

        <EditText
            android:id="@+id/register_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:textColorHint="@color/txt_gray_light"
            android:textSize="@dimen/txt_title" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:errorTextAppearance="@style/MyErrorStyle"
            >

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"
                android:maxLength="4"
                android:singleLine="true"
                android:hint="@string/hint_input_code"
                android:textSize="@dimen/txt_title" >
            </EditText>

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/imageView1"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_selector"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:text="获取验证码"
            android:textSize="@dimen/txt_large"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_login_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageView2"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@style/MyErrorStyle">

            <!-- app:counterEnabled="true"   -->

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:singleLine="true"
                android:ems="10"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                android:textSize="@dimen/txt_title" >
            </EditText>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_phone_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@+id/imageView1"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:errorTextAppearance="@style/MyErrorStyle"
        >

        <EditText
            android:id="@+id/recommend_input_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="请输入推荐人手机号或推荐码（选填）"
            android:inputType="phone"
            android:textColorHint="@color/txt_gray_light"
            android:textSize="@dimen/txt_title" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/chb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读并同意"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/checkbox_selector"
            android:drawablePadding="3dp"
            android:button="@null"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <TextView android:id="@+id/login_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/user_agreement"
            android:textColor="@color/login_text"
            android:textSize="14sp"
            android:visibility="visible"/>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@color/bg_common" >

      <TextView
        android:id="@+id/sure_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
      	android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="立即注册成为大道会员"
        android:textSize="@dimen/txt_large"  />
    </RelativeLayout>
</LinearLayout>
